force-app/main/default/objects/CA_Hierarchy__c/CA_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>This is to store customer advocate hierarchy which is different from salesforce(NCR) Hierarchy for APOC system</description>
    <label>CA Hierarchy</label>
    <nameField>
        <displayFormat>CA{00000}</displayFormat>
        <label>CA Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>