force-app/main/default/objects/CA_Hierarchy__c/fields/CA_QuicklookId__c.field-meta.xml
<CustomField>
    <fullName>CA_QuicklookId__c</fullName>
    <label>CA QuicklookId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>