force-app/main/default/objects/CA_Hierarchy__c/fields/Manager1_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager1_Email__c</fullName>
    <formula>Manager1_Quicklookid__c +&quot;@ncr.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager1 Email</label>
    <type>Text</type>
</CustomField>