force-app/main/default/objects/CA_Hierarchy__c/fields/Manager1_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager1_Name__c</fullName>
    <label>Manager1 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>