force-app/main/default/objects/CA_Hierarchy__c/fields/Manager1_Quicklookid__c.field-meta.xml
<CustomField>
    <fullName>Manager1_Quicklookid__c</fullName>
    <label>Manager1 Quicklookid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>