force-app/main/default/objects/CA_Hierarchy__c/fields/Manager3_Quicklookid__c.field-meta.xml
<CustomField>
    <fullName>Manager3_Quicklookid__c</fullName>
    <label>Manager3 Quicklookid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>