force-app/main/default/objects/CA_Hierarchy__c/fields/Manager4_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager4_Name__c</fullName>
    <label>Manager4 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>